<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_old_password"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/old_password"
        android:maxLines="1"
        android:maxLength="16"
        android:inputType="textPassword"
        android:hint="@string/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/new_password"
        android:maxLines="1"
        android:maxLength="16"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/confirm_password"
        android:maxLines="1"
        android:maxLength="16"
        android:inputType="textPassword"
        android:hint="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_modify"
        android:text="@string/confrim_modify"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/use_email"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_email"
        android:hint="@string/email"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_sendemail"
        android:text="@string/send_email"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>