<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="快递公司"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:entries="@array/spinner"/>

    </LinearLayout>
-->
    <EditText
        android:hint="@string/express_company"
        android:text="yd"
        android:id="@+id/et_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/express_sno"
        android:text="3907086973673"
        android:id="@+id/et_sno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_search"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:text="@string/search"
        android:background="@drawable/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:id="@+id/rvTrace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"/>

</LinearLayout>